--- a/.github/workflows/neon.yml
+++ b/.github/workflows/neon.yml
@@ -3,10 +3,6 @@
 # The Dockerfile is inside .github/assets/docker/kde-neon
 # Build Darkly from release tag and publish .deb package
 
-# Plasma 6.3 post installation notes.
-# Remove libkdecorations2private11
-# Remove libkdecorations2-6
-
 on:
   workflow_call:
     inputs:
@@ -28,16 +24,14 @@ jobs:
           path: ${{ inputs.cache-file-path }}
           fail-on-cache-miss: true
       - name: Run update
-        run: apt-get update -y
-      - name: Install build dependencies
+        run: apt update -y
+      - name: Run dist dist-upgrade
+        run: apt dist-upgrade -y
+      - name: Install extra build dependencies
         run: |
-          apt-get install -y -qq cmake build-essential libkf5config-dev libkdecorations3-dev \
-                    libqt5x11extras5-dev qtdeclarative5-dev extra-cmake-modules \
-                    libkf5guiaddons-dev libkf5configwidgets-dev libkf5windowsystem-dev kirigami2-dev \
-                    libkf5coreaddons-dev libkf5iconthemes-dev gettext qt3d5-dev libkf5kcmutils-dev \
-                    qt6-base-dev libkf6coreaddons-dev \
-                    libkf6config-dev libkf6guiaddons-dev libkf6i18n-dev libkf6iconthemes-dev \
-                    libkf6windowsystem-dev libkf6kcmutils-dev libkirigami-dev kf6-frameworkintegration-dev
+          apt install -y -qq libkf5coreaddons-dev libkf5configwidgets-dev libkf5iconthemes-dev \
+                                  libkf5windowsystem-dev libkf5kcmutils-dev libkf6style6 \
+                                  qtdeclarative5-dev libkf5style-dev
       - name: Extract release tarball
         run: |
           tar xvf ${{ inputs.cache-file-path }}
@@ -49,7 +43,7 @@ jobs:
         id: create_deb_package
         run: |
           cd build_kf6
-          make install .
+          cmake --install .
           checkinstall -D --pkgname darkly --pkgversion ${{ inputs.version }} --nodoc --default
           deb_file=$(find . -name "*.deb*")
           test ! -z $deb_file && mv $deb_file /home/neon/darkly_${{ inputs.version }}_kdeneon_amd64.deb
@@ -59,4 +53,3 @@ jobs:
         if: startsWith(github.ref, 'refs/tags/')
         with:
           files: ${{ steps.create_deb_package.outputs.DEB_ASSET }}
-          
