--- a/.github/workflows/darkly-ci.yml
+++ b/.github/workflows/darkly-ci.yml
@@ -7,7 +7,7 @@ on:
 env:
   BUILD_TYPE: Release
   BUILD_WS: build_kf6
-  BUILD_REPO: https://github.com/Bali10050/Darkly
+  BUILD_REPO: https://github.com/DeltaCopy/Darkly
 jobs:
   release-ci:
     runs-on: ubuntu-24.04
@@ -50,12 +50,12 @@ jobs:
           path: ${{ steps.step_get_asset.outputs.ASSET }}
           key: ${{ runner.os }}-v${{ steps.step_getlatest_tag.outputs.VERSION }}-${{ hashFiles(steps.step_get_asset.outputs.ASSET) }}
 
-  # Kubuntu:
-  #   needs: release-ci
-  #   uses: ./.github/workflows/kubuntu.yml
-  #   with:
-  #     cache-file-path: ${{ needs.release-ci.outputs.ASSET }}
-  #     version: ${{ needs.release-ci.outputs.VERSION }}
+  Kubuntu:
+    needs: release-ci
+    uses: ./.github/workflows/kubuntu.yml
+    with:
+      cache-file-path: ${{ needs.release-ci.outputs.ASSET }}
+      version: ${{ needs.release-ci.outputs.VERSION }}
 
   openSUSE-Tumbleweed:
     needs: release-ci
