--- a/.github/workflows/darkly-ci.yml
+++ b/.github/workflows/darkly-ci.yml
@@ -50,37 +50,37 @@ jobs:
           path: ${{ steps.step_get_asset.outputs.ASSET }}
           key: ${{ runner.os }}-v${{ steps.step_getlatest_tag.outputs.VERSION }}-${{ hashFiles(steps.step_get_asset.outputs.ASSET) }}
 
-  # Kubuntu:
+  Kubuntu:
+    needs: release-ci
+    uses: ./.github/workflows/kubuntu.yml
+    with:
+      cache-file-path: ${{ needs.release-ci.outputs.ASSET }}
+      version: ${{ needs.release-ci.outputs.VERSION }}
+
+  # openSUSE-Tumbleweed:
   #   needs: release-ci
-  #   uses: ./.github/workflows/kubuntu.yml
+  #   uses: ./.github/workflows/opensuse-tw.yml
   #   with:
   #     cache-file-path: ${{ needs.release-ci.outputs.ASSET }}
   #     version: ${{ needs.release-ci.outputs.VERSION }}
 
-  openSUSE-Tumbleweed:
-    needs: release-ci
-    uses: ./.github/workflows/opensuse-tw.yml
-    with:
-      cache-file-path: ${{ needs.release-ci.outputs.ASSET }}
-      version: ${{ needs.release-ci.outputs.VERSION }}
+  # KDE-Neon:
+  #   needs: release-ci
+  #   uses: ./.github/workflows/neon.yml
+  #   with:
+  #     cache-file-path: ${{ needs.release-ci.outputs.ASSET }}
+  #     version: ${{ needs.release-ci.outputs.VERSION }}
 
-  KDE-Neon:
-    needs: release-ci
-    uses: ./.github/workflows/neon.yml
-    with:
-      cache-file-path: ${{ needs.release-ci.outputs.ASSET }}
-      version: ${{ needs.release-ci.outputs.VERSION }}
+  # Fedora:
+  #   needs: release-ci
+  #   uses: ./.github/workflows/fedora.yml
+  #   with:
+  #     cache-file-path: ${{ needs.release-ci.outputs.ASSET }}
+  #     version: ${{ needs.release-ci.outputs.VERSION }}
+  #     containers: "['fedora:latest', 'fedora:40']"
 
-  Fedora:
-    needs: release-ci
-    uses: ./.github/workflows/fedora.yml
-    with:
-      cache-file-path: ${{ needs.release-ci.outputs.ASSET }}
-      version: ${{ needs.release-ci.outputs.VERSION }}
-      containers: "['fedora:latest', 'fedora:40']"
-
-  Archlinux:
-    needs: release-ci
-    uses: ./.github/workflows/archlinux.yml
-    with:
-      version: ${{ needs.release-ci.outputs.VERSION }}
+  # Archlinux:
+  #   needs: release-ci
+  #   uses: ./.github/workflows/archlinux.yml
+  #   with:
+  #     version: ${{ needs.release-ci.outputs.VERSION }}
