--- a/kstyle/CMakeLists.txt
+++ b/kstyle/CMakeLists.txt
@@ -111,10 +111,12 @@ endif()
 
 ########### install files ###############
 install(TARGETS darkly${QT_MAJOR_VERSION} DESTINATION ${KDE_INSTALL_QTPLUGINDIR}/styles/)
-install(FILES darkly.themerc  DESTINATION  ${KDE_INSTALL_DATADIR}/kstyle/themes)
+if (!FOR_FLATPAK)
+    install(FILES darkly.themerc  DESTINATION  ${KDE_INSTALL_DATADIR}/kstyle/themes)
+endif()
 
 ########### subdirectories ###############
 
-if (QT_MAJOR_VERSION EQUAL "6" AND TARGET "KF6::KCMUtils")
+if (QT_MAJOR_VERSION EQUAL "6" AND TARGET "KF6::KCMUtils" AND !FOR_FLATPAK)
     add_subdirectory(config)
 endif()
