Revert "Updated KDE SDK and Runtime, added config build target for flatpak,"
This reverts commit d2b685242c8b2d69aa5507459ff5e53c01bd9ca0.

--- a/kstyle/CMakeLists.txt
+++ b/kstyle/CMakeLists.txt
@@ -123,6 +123,6 @@ endif()
 
 ########### subdirectories ###############
 
-if (QT_MAJOR_VERSION EQUAL "6" AND TARGET "KF6::KCMUtils")
+if (QT_MAJOR_VERSION EQUAL "6" AND TARGET "KF6::KCMUtils" AND NOT FOR_FLATPAK)
     add_subdirectory(config)
 endif()
