--- a/.github/workflows/darkly-ci.yml
+++ b/.github/workflows/darkly-ci.yml
@@ -1,9 +1,6 @@
 # Build Darkly and publish release
 name: Darkly build & release
-on:
-  push:
-    tags:
-      - "v*"
+on: workflow_dispatch
 env:
   BUILD_TYPE: Release
   BUILD_WS: build_kf6
@@ -57,37 +54,37 @@ jobs:
       cache-file-path: ${{ needs.release-ci.outputs.ASSET }}
       version: ${{ needs.release-ci.outputs.VERSION }}
 
-  openSUSE-Tumbleweed:
-    needs: release-ci
-    uses: ./.github/workflows/opensuse-tw.yml
-    with:
-      cache-file-path: ${{ needs.release-ci.outputs.ASSET }}
-      version: ${{ needs.release-ci.outputs.VERSION }}
+  # openSUSE-Tumbleweed:
+  #   needs: release-ci
+  #   uses: ./.github/workflows/opensuse-tw.yml
+  #   with:
+  #     cache-file-path: ${{ needs.release-ci.outputs.ASSET }}
+  #     version: ${{ needs.release-ci.outputs.VERSION }}
 
-  KDE-Neon:
-    needs: release-ci
-    uses: ./.github/workflows/neon.yml
-    with:
-      cache-file-path: ${{ needs.release-ci.outputs.ASSET }}
-      version: ${{ needs.release-ci.outputs.VERSION }}
+  # KDE-Neon:
+  #   needs: release-ci
+  #   uses: ./.github/workflows/neon.yml
+  #   with:
+  #     cache-file-path: ${{ needs.release-ci.outputs.ASSET }}
+  #     version: ${{ needs.release-ci.outputs.VERSION }}
 
-  Fedora:
-    needs: release-ci
-    uses: ./.github/workflows/fedora.yml
-    with:
-      cache-file-path: ${{ needs.release-ci.outputs.ASSET }}
-      version: ${{ needs.release-ci.outputs.VERSION }}
-      containers: "['fedora:latest', 'fedora:41', 'fedora:40']"
+  # Fedora:
+  #   needs: release-ci
+  #   uses: ./.github/workflows/fedora.yml
+  #   with:
+  #     cache-file-path: ${{ needs.release-ci.outputs.ASSET }}
+  #     version: ${{ needs.release-ci.outputs.VERSION }}
+  #     containers: "['fedora:41','fedora:42','fedora:43']"
 
-  Archlinux:
-    needs: release-ci
-    uses: ./.github/workflows/archlinux.yml
-    with:
-      version: ${{ needs.release-ci.outputs.VERSION }}
+  # Archlinux:
+  #   needs: release-ci
+  #   uses: ./.github/workflows/archlinux.yml
+  #   with:
+  #     version: ${{ needs.release-ci.outputs.VERSION }}
 
-  Flatpak:
-    needs: release-ci
-    uses: ./.github/workflows/flatpak.yml
-    with:
-      cache-file-path: ${{ needs.release-ci.outputs.ASSET }}
-      version: ${{ needs.release-ci.outputs.VERSION }}
+  # Flatpak:
+  #   needs: release-ci
+  #   uses: ./.github/workflows/flatpak.yml
+  #   with:
+  #     cache-file-path: ${{ needs.release-ci.outputs.ASSET }}
+  #     version: ${{ needs.release-ci.outputs.VERSION }}
