Switch repo for testing purposes.

--- a/.github/workflows/darkly-ci.yml
+++ b/.github/workflows/darkly-ci.yml
@@ -5,7 +5,7 @@ on:
     tags:
       - "v*"
 env:
-  BUILD_REPO: https://github.com/Bali10050/Darkly
+  BUILD_REPO: https://github.com/DeltaCopy/Darkly
 jobs:
   release-ci:
     runs-on: ubuntu-24.04
