Drop f41, as kdecoration is still on 6.4

--- a/.github/workflows/darkly-ci.yml
+++ b/.github/workflows/darkly-ci.yml
@@ -90,7 +90,7 @@ jobs:
     with:
       cache-file-path: ${{ needs.release-ci.outputs.ASSET }}
       version: ${{ needs.release-ci.outputs.VERSION }}
-      containers: "['fedora:41','fedora:42','fedora:43']"
+      containers: "['fedora:42','fedora:43']"
 
   # Archlinux:
   #   needs: release-ci
