--- a/.github/workflows/darkly-ci.yml
+++ b/.github/workflows/darkly-ci.yml
@@ -56,33 +56,33 @@ jobs:
           path: VERSION
           retention-days: 1
 
-  # Debian:
-  #   needs: release-ci
-  #   uses: ./.github/workflows/debian14.yml
-  #   with:
-  #     cache-file-path: ${{ needs.release-ci.outputs.ASSET }}
-  #     version: ${{ needs.release-ci.outputs.VERSION }}
+  Debian:
+    needs: release-ci
+    uses: ./.github/workflows/debian14.yml
+    with:
+      cache-file-path: ${{ needs.release-ci.outputs.ASSET }}
+      version: ${{ needs.release-ci.outputs.VERSION }}
 
-  # Kubuntu:
-  #   needs: release-ci
-  #   uses: ./.github/workflows/kubuntu.yml
-  #   with:
-  #     cache-file-path: ${{ needs.release-ci.outputs.ASSET }}
-  #     version: ${{ needs.release-ci.outputs.VERSION }}
+  Kubuntu:
+    needs: release-ci
+    uses: ./.github/workflows/kubuntu.yml
+    with:
+      cache-file-path: ${{ needs.release-ci.outputs.ASSET }}
+      version: ${{ needs.release-ci.outputs.VERSION }}
 
-  # openSUSE-Tumbleweed:
-  #   needs: release-ci
-  #   uses: ./.github/workflows/opensuse-tw.yml
-  #   with:
-  #     cache-file-path: ${{ needs.release-ci.outputs.ASSET }}
-  #     version: ${{ needs.release-ci.outputs.VERSION }}
+  openSUSE-Tumbleweed:
+    needs: release-ci
+    uses: ./.github/workflows/opensuse-tw.yml
+    with:
+      cache-file-path: ${{ needs.release-ci.outputs.ASSET }}
+      version: ${{ needs.release-ci.outputs.VERSION }}
 
-  # KDE-Neon:
-  #   needs: release-ci
-  #   uses: ./.github/workflows/neon.yml
-  #   with:
-  #     cache-file-path: ${{ needs.release-ci.outputs.ASSET }}
-  #     version: ${{ needs.release-ci.outputs.VERSION }}
+  KDE-Neon:
+    needs: release-ci
+    uses: ./.github/workflows/neon.yml
+    with:
+      cache-file-path: ${{ needs.release-ci.outputs.ASSET }}
+      version: ${{ needs.release-ci.outputs.VERSION }}
 
   Fedora:
     needs: release-ci
@@ -92,20 +92,19 @@ jobs:
       version: ${{ needs.release-ci.outputs.VERSION }}
       containers: "['fedora:42','fedora:43']"
 
-  # Archlinux:
-  #   needs: release-ci
-  #   uses: ./.github/workflows/archlinux.yml
-  #   with:
-  #     version: ${{ needs.release-ci.outputs.VERSION }}
+  Archlinux:
+    needs: release-ci
+    uses: ./.github/workflows/archlinux.yml
+    with:
+      version: ${{ needs.release-ci.outputs.VERSION }}
 
-  # Flatpak:
-  #   needs: release-ci
-  #   uses: ./.github/workflows/flatpak.yml
-  #   with:
-  #     cache-file-path: ${{ needs.release-ci.outputs.ASSET }}
-  #     version: ${{ needs.release-ci.outputs.VERSION }}
+  Flatpak:
+    needs: release-ci
+    uses: ./.github/workflows/flatpak.yml
+    with:
+      cache-file-path: ${{ needs.release-ci.outputs.ASSET }}
+      version: ${{ needs.release-ci.outputs.VERSION }}
 
   release:
     uses: ./.github/workflows/release.yml
-    # needs: ["archlinux", "fedora", "opensuse-tumbleweed", "kde-neon", "kubuntu", "debian", "flatpak"]
-    needs: ["fedora"]
+    needs: ["archlinux", "fedora", "opensuse-tumbleweed", "kde-neon", "kubuntu", "debian", "flatpak"]
