Disable kubuntu, as Plasma 6.5 or above is required

--- a/.github/workflows/darkly-ci.yml
+++ b/.github/workflows/darkly-ci.yml
@@ -63,12 +63,12 @@ jobs:
       cache-file-path: ${{ needs.release-ci.outputs.ASSET }}
       version: ${{ needs.release-ci.outputs.VERSION }}
 
-  Kubuntu:
-    needs: release-ci
-    uses: ./.github/workflows/kubuntu.yml
-    with:
-      cache-file-path: ${{ needs.release-ci.outputs.ASSET }}
-      version: ${{ needs.release-ci.outputs.VERSION }}
+  # Kubuntu:
+  #   needs: release-ci
+  #   uses: ./.github/workflows/kubuntu.yml
+  #   with:
+  #     cache-file-path: ${{ needs.release-ci.outputs.ASSET }}
+  #     version: ${{ needs.release-ci.outputs.VERSION }}
 
   openSUSE-Tumbleweed:
     needs: release-ci
@@ -107,4 +107,12 @@ jobs:
 
   release:
     uses: ./.github/workflows/release.yml
-    needs: ["archlinux", "fedora", "opensuse-tumbleweed", "kde-neon", "kubuntu", "debian", "flatpak"]
+    needs:
+      [
+        "archlinux",
+        "fedora",
+        "opensuse-tumbleweed",
+        "kde-neon",
+        "debian",
+        "flatpak",
+      ]
